spade-macros/tests/into_subdiagnostic/ui/missing_outer_attr.stderr
error: missing outer #[diagnostic] attribute
 --> tests/into_subdiagnostic/ui/missing_outer_attr.rs:3:10
  |
3 | #[derive(spade_macros::IntoSubdiagnostic)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `spade_macros::IntoSubdiagnostic` (in Nightly builds, run with -Z macro-backtrace for more info)
