spade-macros/tests/into_subdiagnostic/ui/missing_outer_attr.rs
struct Loc<T>(std::marker::PhantomData<T>);

#[derive(spade_macros::IntoSubdiagnostic)]
struct Diagnostic {
    at: Loc<()>,
}

fn main() {}
